--- a/Custom Selectboxes/style.css
+++ b/Custom Selectboxes/style.css
@@ -3,8 +3,7 @@
   padding: 0;
 }
 
-
-body {
+body{
   background: #f2f2f2;
   display: flex;
   justify-content: center;
@@ -14,11 +13,11 @@ body {
   margin: 0;
   height: 100vh;
   width: 100%;
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   color: white;
 }
 
-.select {
+.select{
   display: flex;
   flex-direction: column;
   position: relative;
@@ -26,7 +25,7 @@ body {
   height: 40px;
 }
 
-.option {
+.option{
   padding: 0 30px 0 10px;
   min-height: 40px;
   display: flex;
@@ -43,39 +42,38 @@ body {
   box-sizing: border-box;
   overflow: hidden;
   white-space: nowrap;
-  
 }
 
-.option:hover {
-  background:#1d4368;
+.option:hover{
+  background: #1d4368;
 }
 
-.select:focus .option {
+.select:focus .option{
   position: relative;
   pointer-events: all;
 }
 
-input {
+input{
   opacity: 0;
   position: absolute;
-  left:0;
+  left: 0;
 }
 
-input:checked + label {
+input:checked + label{
   order: 1;
   z-index: 2;
-  background:#004381;
+  background: #004381;
   border-top: none;
   position: relative;
 }
 
-input:checked + label:after {
-  content:'';
-  width: 0; 
-	height: 0; 
-	border-left: 5px solid transparent;
-	border-right: 5px solid transparent;
-	border-top: 5px solid white;
+input:checked + label::after{
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid white;
   position: absolute;
   right: 10px;
   top: calc(50% - 2.5px);
@@ -83,11 +81,11 @@ input:checked + label:after {
   z-index: 3;
 }
 
-input:checked + label:before {
+input:checked + label::before{
   position: absolute;
   right: 0;
   height: 40px;
   width: 40px;
-  content: '';
-  background:#004381;
+  content: "";
+  background: #004381;
 }
