--- a/Music Player CSS JS/style.css
+++ b/Music Player CSS JS/style.css
@@ -13,21 +13,12 @@ body{
     align-items: center;
 }
 
-.overlay{
-    height: fit-content;
-    width: 35vw;
-    border-radius: 10px;
-    background-image: url(HUMKBLE.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
 .music-player-container{
     background: linear-gradient(30deg, rgba(0,0,0,0.65), rgba(0,0,0,0.85));
     backdrop-filter: blur(10px);
-    height: 100%;
-    width: 100%;
-    border-radius: inherit;
+    height: fit-content;
+    width: 35vw;
+    border-radius: 10px;
     padding: 2rem 0;
     display: flex;
     justify-content: center;
@@ -38,8 +29,11 @@ body{
 
 .title-music-container{
     width: 80%;
-    height: fit-content;
+    height: 80%;
+    width: fit-content;
     color: white;
+    margin-right: auto;
+    margin-left: 10%;
 }
 
 .song-title{
@@ -82,11 +76,10 @@ body{
 }
 
 .progress{
-    content: "";
     position: absolute;
     height: 100%;
-    border-radius: inherit;
     width: 0%;
+    border-radius: 3px;
     background-color: white;
 }
 
@@ -118,7 +111,6 @@ body{
     opacity: 0.6;
     cursor: pointer;
 }
-
 
 .icon:hover{
     opacity: 1;
